Update Analytical Goal #2.ipynb

--- a/Notebooks/Analytical Goal #2.ipynb
+++ b/Notebooks/Analytical Goal #2.ipynb
@@ -63,8 +63,8 @@
    "source": [
     "database = 'MSDS697'\n",
     "collection = 'Tweets'\n",
-    "user_name = 'qliu46'\n",
-    "password = 'Tina0726'\n",
+    "user_name = ''\n",
+    "password = ''\n",
     "address = 'msds697.us6ly.mongodb.net'#grad address from MongoDB\n",
     "connection_string = f\"mongodb+srv://{user_name}:{password}@{address}/{database}.{collection}\"\n",
     "df = spark.read.format(\"mongo\").option(\"uri\",connection_string).load().dropna(how='any')"
